templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cadence-web
  namespace: cadence
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  rules:
    - host: cadence-dev.axcient.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cadence-web
                port:
                  number: 80
